--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
   "dependencies": {
     "ejs": "^2.5.7",
     "express": "^4.16.2",
+    "passport": "^0.4.0",
+    "passport-github2": "^0.1.11",
     "path": "^0.12.7",
     "react": "^16.0.0",
     "react-dom": "^16.0.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
